--- a/Mumbaikars_Assignment3/assignment3.ipynb
+++ b/Mumbaikars_Assignment3/assignment3.ipynb
@@ -6,24 +6,7 @@
    "id": "f1495f64",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "#import statements\n",
-    "import json\n",
-    "import numpy as np\n",
-    "import random\n",
-    "import re\n",
-    "import spacy\n",
-    "\n",
-    "from nltk.stem import PorterStemmer\n",
-    "from numpy import dot\n",
-    "from numpy.linalg import norm\n",
-    "from sklearn import metrics\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.svm import SVC\n",
-    "from textblob import TextBlob\n",
-    "from tqdm import tqdm"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -235,9 +218,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1936/1936 [08:39<00:00,  3.72it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 258/258 [01:01<00:00,  4.18it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 258/258 [01:01<00:00,  4.20it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1936/1936 [08:32<00:00,  3.78it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████| 258/258 [01:04<00:00,  4.00it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████████| 258/258 [01:03<00:00,  4.06it/s]\n"
      ]
     }
    ],
@@ -442,9 +425,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 1936/1936 [00:00<00:00, 2517.74it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████| 258/258 [00:00<00:00, 3785.02it/s]\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████| 258/258 [00:00<00:00, 5911.12it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 1936/1936 [00:00<00:00, 4845.16it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████| 258/258 [00:00<00:00, 4694.34it/s]\n",
+      "100%|██████████████████████████████████████████████████████████████████████████████| 258/258 [00:00<00:00, 5156.83it/s]\n"
      ]
     }
    ],
@@ -530,36 +513,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "68f2937d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LibSVM]"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "SVC(verbose=True)"
+       "SVC()"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf = SVC(verbose = True)\n",
+    "clf = SVC()\n",
     "clf.fit(x_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "5be50f91",
    "metadata": {},
    "outputs": [],
@@ -570,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "eabd521d",
    "metadata": {},
    "outputs": [
