Updates to code as per new dataset... Final commit

--- a/Mumbaikars_Assignment3/assignment3.ipynb
+++ b/Mumbaikars_Assignment3/assignment3.ipynb
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bb4dd1cf",
+   "id": "3912855e",
    "metadata": {
     "scrolled": true
    },
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3a7d6af8",
+   "id": "b2d381a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "44b567b5",
+   "id": "278a4e92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "524bea70",
+   "id": "90b93e3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3f7a05e0",
+   "id": "81ffdfa6",
    "metadata": {
     "scrolled": true
    },
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4f96bb3e",
+   "id": "ae246c16",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c598fe9",
+   "id": "c7f793c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "5be50f91",
    "metadata": {},
    "outputs": [],
@@ -763,12 +763,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "eabd521d",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for val data: 0.7286821705426356\n",
+      "Accuracy for test data: 0.7286821705426356\n",
+      "Precision val: 0.6878980891719745\n",
+      "Precision test: 0.6878980891719745\n",
+      "Recall val: 0.8372093023255814\n",
+      "Recall test: 0.8372093023255814\n",
+      "F1 score val: 0.7552447552447552\n",
+      "F1 score test: 0.7552447552447552\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy for val data:\",metrics.accuracy_score(y_val, val_pred))\n",
     "print(\"Accuracy for test data:\",metrics.accuracy_score(y_test, test_pred))\n",
